# KMGR

./: KMGRprotocolPrompt.txt  build_kpkg.ps1  kmgr.py  kmgr_local.ps1  kmgr_wrapper.cmd  knowledge.psm1  pyproject.toml  repos.json  run_kmgr.bat  server.py
bootstrap/: conv_import.json
filestream/: file-stream-server.mjs  start_fs.ps1
filestream/server/: file-stream-server.ps1
scratch/: STATE_PIN.md  build_pack_cli.py  convert.sh  filestream_boot.err  kmgr_boot.txt  manual_all.txt  manual_stderr.txt
src/: pyproject.toml
src/mcp_kmgr/: README.md  __main__.py  server.py
